<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/set_start_time1">
        <item
            android:id="@+id/time1"
            android:title="@string/time1" />
        <item
            android:id="@+id/time2"
            android:title="@string/time2" />
        <item
            android:id="@+id/time3"
            android:title="@string/time3" />
        <item
            android:id="@+id/time4"
            android:title="@string/time4" />
        <item
            android:id="@+id/time5"
            android:title="@string/time5" />
        <item
            android:id="@+id/time6"
            android:title="@string/time6" />
        <item
            android:id="@+id/time7"
            android:title="@string/time7" />
        <item
            android:id="@+id/time8"
            android:title="@string/time8" />
        <item
            android:id="@+id/time9"
            android:title="@string/time9" />
        <item
            android:id="@+id/time10"
            android:title="@string/time10" />
        <item
            android:id="@+id/time11"
            android:title="@string/time11" />
        <item
            android:id="@+id/time12"
            android:title="@string/time12" />
        <item
            android:id="@+id/time13"
            android:title="@string/time13" />
        <item
            android:id="@+id/time14"
            android:title="@string/time14" />
        <item
            android:id="@+id/time15"
            android:title="@string/time15" />
        <item
            android:id="@+id/time16"
            android:title="@string/time16" />
        <item
            android:id="@+id/time17"
            android:title="@string/time17" />
        <item
            android:id="@+id/time18"
            android:title="@string/time18" />
        <item
            android:id="@+id/time19"
            android:title="@string/time19" />
        <item
            android:id="@+id/time20"
            android:title="@string/time20" />
        <item
            android:id="@+id/time21"
            android:title="@string/time21" />
        <item
            android:id="@+id/time22"
            android:title="@string/time22" />
        <item
            android:id="@+id/time23"
            android:title="@string/time23" />
        <item
            android:id="@+id/time24"
            android:title="@string/time24" />
    </group>
</menu>